# KooReminder

./: CMakeLists.txt  install.sh
lib/: alarms.h  functionsDeclaration.h  globalVariables.h  screens.h  widgets.h
src/RaspberryPi/: main.c
src/backend/: index.html  index.js  package-lock.json  package.json
