CMAKE_MINIMUM_REQUIRED( VERSION 3.6 )

PROJECT( KooReminder C )

ADD_EXECUTABLE( kooReminder src/RaspberryPi/main.c )

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)

TARGET_INCLUDE_DIRECTORIES( kooReminder PUBLIC ${PROJECT_SOURCE_DIR}/include )
TARGET_INCLUDE_DIRECTORIES( kooReminder PUBLIC ${PROJECT_SOURCE_DIR}/lib )
INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})

ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})

TARGET_LINK_LIBRARIES( kooReminder ${GTK3_LIBRARIES})
